2010-07-08  Sam Steingold  <sds@gnu.org>

	* init.lisp (sys::check-redefinition): signal STYLE-WARNING
	instead of WARNING
	(warn-of-type): add a predefun

2010-07-08  Vladimir Tzankov  <vtzankov@gmail.com>

	* spvw.d (main_actions): move all MT specific stuff to mt_main_actions
	(mt_main_actions): implement main thread killing here

2010-07-07  Sam Steingold  <sds@gnu.org>

	* Makefile.devel (upload-sf): use scp instead of rsync

2010-07-07  Sam Steingold  <sds@gnu.org>

	* version.sh: 2.49 (2010-07-07)

2010-07-07  Sam Steingold  <sds@gnu.org>

	Fix MSVC support
	* Makefile.devel (win32msvc/makefile.msvc6, win32msvc/makefile.msvc7):
	pass --without-dynamic-modules to makemake
	($(MAKEMAKE_TMP)): substitute CLISP_DECOLONIZE
	* makemake.in: check for ./libtool before invoking it

2010-07-07  Vladimir Tzankov  <vtzankov@gmail.com>

	* zthread.d (thread_stub): fix double call to set_current_thread.
	causes problems	with USE_CUSTOM_TLS = 2
	* spvw.d (main) [USE_CUSTOM_TLS = 2]: remove the thread specific value
	for signal handling (main) thread

2010-07-05  Yaroslav Kavenchuk  <kavenchuk@jenty.by>

	* makemake.in (CLISP_LIBDIR): use "$(@CLISP_DECOLONIZE@)"

2010-07-04  Sam Steingold  <sds@gnu.org>

	Fix unbuffered output pipe stream initialization (bug#3024887).
	* stream.d (make_pipe): init output unbuffered streams appropriately

2010-07-03  Bruno Haible  <bruno@clisp.org>

	Support for MacOS X in 64-bit mode.
	* m4/mmap.m4 (CL_MMAP): On MacOS X in 64-bit mode, use a base address,
	so that the test succeeds.
	* lispbibl.d (HEAPCODES): Define by default on MacOS X in 64-bit mode.
	* spvw.d (init_memory): Hardcode bounds for mmap on MacOS X in
	64-bit mode.
	* makemake.in (cpu): On MacOS X in 64-bit mode, set it to x86_64.

2010-07-02  Sam Steingold  <sds@gnu.org>

	* init.lisp (load): add RETRY restart to SKIP and STOP
	* condition.lisp (eval-loaded-form): ditto

2010-06-27  Sam Steingold  <sds@gnu.org>

	Support libsvm 2.91